--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-DATABASE_URL="postgresql://postgres:${DB_PASSWORD}@localhost:5432/postgres"
-DB_PASSWORD="password"
+DATABASE_URL="postgresql://postgres:password@localhost:5432/postgres"
 GITHUB_CLIENT_SECRET=""
 GITHUB_CLIENT_ID=""
 BETTER_AUTH_SECRET=""
