--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ GITHUB_CLIENT_SECRET=""
 GITHUB_CLIENT_ID=""
 BETTER_AUTH_SECRET=""
 BETTER_AUTH_URL=http://localhost:3000
+GMAIL_USER=""
+GMAIL_APP_PASSWORD=""
+NEXT_PUBLIC_TURNSTILE_SITE_KEY=""
