--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"docker": "docker-compose up -d"
 	},
 	"dependencies": {
+		"@marsidev/react-turnstile": "^1.1.0",
 		"@radix-ui/react-avatar": "^1.1.2",
 		"@radix-ui/react-dialog": "^1.1.4",
 		"@radix-ui/react-label": "^2.1.1",
@@ -21,37 +22,37 @@
 		"@radix-ui/react-select": "^2.1.4",
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-switch": "^1.1.2",
-		"@react-email/components": "^0.0.31",
-		"@react-email/render": "^1.0.3",
-		"better-auth": "^1.0.22",
+		"@react-email/components": "^0.0.32",
+		"@react-email/render": "^1.0.4",
+		"better-auth": "^1.1.10",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.4",
 		"date-fns": "^4.1.0",
-		"lucide-react": "^0.468.0",
-		"next": "15.1.1",
+		"lucide-react": "^0.469.0",
+		"next": "15.1.4",
 		"next-themes": "^0.4.4",
 		"nodemailer": "^6.9.16",
 		"oslo": "^1.2.1",
 		"react": "19.0.0",
-		"react-day-picker": "9.4.4",
+		"react-day-picker": "9.5.0",
 		"react-dom": "19.0.0",
 		"sonner": "^1.7.1",
-		"tailwind-merge": "^2.5.5",
+		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
 		"vaul": "^1.1.2",
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
-		"@prisma/client": "^6.1.0",
+		"@prisma/client": "^6.2.0",
 		"@types/node": "^22",
 		"@types/nodemailer": "^6.4.17",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
-		"eslint-config-next": "15.1.1",
+		"eslint-config-next": "15.1.4",
 		"postcss": "^8",
-		"prisma": "^6.1.0",
+		"prisma": "^6.2.0",
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5"
 	}
