--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"docker": "docker-compose up -d"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.10.0",
 		"@marsidev/react-turnstile": "^1.1.0",
 		"@radix-ui/react-avatar": "^1.1.2",
 		"@radix-ui/react-dialog": "^1.1.4",
@@ -37,6 +38,7 @@
 		"react": "19.0.0",
 		"react-day-picker": "9.5.0",
 		"react-dom": "19.0.0",
+		"react-hook-form": "^7.54.2",
 		"sonner": "^1.7.1",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
