Update dependencies, refactor booking model, and enhance UI components
- Refactored the `Booking` model in Prisma schema to rename `date` to `startDate` for clarity and added a new `RateLimit` model.
- Updated various components to reflect the new `startDate` field and improved UI with dropdown menus and alert dialogs for better user interaction.
- Enhanced the sign-in process to validate against disposable email domains.

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
 	"dependencies": {
 		"@hookform/resolvers": "^3.10.0",
 		"@marsidev/react-turnstile": "^1.1.0",
+		"@radix-ui/react-alert-dialog": "^1.1.4",
 		"@radix-ui/react-avatar": "^1.1.2",
 		"@radix-ui/react-dialog": "^1.1.4",
+		"@radix-ui/react-dropdown-menu": "^2.1.4",
 		"@radix-ui/react-label": "^2.1.1",
 		"@radix-ui/react-popover": "^1.1.4",
 		"@radix-ui/react-radio-group": "^1.2.2",
@@ -30,6 +32,7 @@
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.4",
 		"date-fns": "^4.1.0",
+		"disposable-email-domains-js": "^1.8.0",
 		"lucide-react": "^0.469.0",
 		"next": "15.1.4",
 		"next-themes": "^0.4.4",
