--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
 		"@radix-ui/react-switch": "^1.1.2",
 		"@react-email/components": "^0.0.32",
 		"@react-email/render": "^1.0.4",
-		"better-auth": "^1.1.10",
+		"better-auth": "^1.1.14",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.4",
 		"date-fns": "^4.1.0",
-		"disposable-email-domains-js": "^1.8.0",
-		"lucide-react": "^0.469.0",
-		"next": "15.1.4",
+		"date-fns-tz": "^3.2.0",
+		"disposable-email-domains-js": "^1.9.0",
+		"lucide-react": "^0.473.0",
+		"next": "15.1.5",
 		"next-themes": "^0.4.4",
 		"nodemailer": "^6.9.16",
 		"oslo": "^1.2.1",
@@ -42,7 +43,7 @@
 		"react-day-picker": "9.5.0",
 		"react-dom": "19.0.0",
 		"react-hook-form": "^7.54.2",
-		"sonner": "^1.7.1",
+		"sonner": "^1.7.2",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
 		"vaul": "^1.1.2",
@@ -55,7 +56,7 @@
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
-		"eslint-config-next": "15.1.4",
+		"eslint-config-next": "15.1.5",
 		"postcss": "^8",
 		"prisma": "^6.2.1",
 		"tailwindcss": "^3.4.17",
