--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@radix-ui/react-switch": "^1.1.2",
 		"@react-email/components": "^0.0.32",
 		"@react-email/render": "^1.0.4",
+		"@react-email/tailwind": "^1.0.4",
 		"better-auth": "^1.1.14",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
